# frappe_tatva_connect

./: .gitignore  CLAUDE.md  Containerfile  FRAPPE.md  README.md  apps.json  compose.app.yml  compose.db.yml  flyout-tree.md  pyproject.toml
api-docs/: build_pages.py  deploy-docs.sh  openapi-partner.json  openapi.json  package.json  retag_spec.py  tsconfig.json  zudoku.config.ts
api-docs/pages/: concepts.mdx  errors.mdx  introduction.mdx  operations.mdx  quickstart.mdx  welcome.mdx
api-docs/public/: openapi.json  tatvacare-partner-api.openapi.json
nginx/: frappe.conf.template
security/: .secrets.baseline  README.md  dast-targets.txt  requirements.txt  tcsec.py
security/semgrep-rules/: frappe.yml
tatva_connect/: client_scripts_seed.py  form_scripts_seed.py  hooks.py  modules.txt  patches.txt  routing.py  schema_setup.py  seed_activity_catalog.py  seed_side_effect_options.py  seeds.py  utils.py
tatva_connect/access/: __init__.py  entitlement.py  lockdown.py  native_guards.py  picklist.py  visibility.py
tatva_connect/activity/: api.py  automation.py
tatva_connect/api/: _base.py  activities.py  apps.py  email.py  list_link_titles.py  notes.py  partner.py  partner_activity.py  partner_call.py  partner_file.py  telephony.py  whatsapp.py
tatva_connect/automation/: __init__.py  describe.py  dispatcher.py  drift.py  registry.py  rules.py  seed.py  settings.py
tatva_connect/desktop_icon/: automations.json  communications.json  field_operations.json  infrastructure.json  learning.json  learning_editor.json  lms.json  lms_editor.json  observability.json  partner_api.json  tatva_connect.json  tatva_titan.json  wiki_docs.json  wiki_editor.json
tatva_connect/fixtures/: custom_field.json  dashboard_chart.json  desktop_icon.json  number_card.json  role.json  workspace.json  workspace_sidebar.json
tatva_connect/intake/: api.py  builder.py  guards.py  intake.py
tatva_connect/lead/: assignment_rule.py  detail.py  leads.py
tatva_connect/location/: api.py
tatva_connect/near_me/: api.py
tatva_connect/notes/: permissions.py
tatva_connect/notifications/: api.py  catalog.py  dispatch.py  drift.py  events.py  prefs.py  presence.py  sender.py
tatva_connect/observability/: README.md  analytics.py  capture.py  constants.py  rollup.py
tatva_connect/patches/: add_acefone_telephony_medium.py  add_crm_task_metrics_index.py  add_observability_indexes.py  add_whatsapp_message_id_unique_index.py  backfill_catalog_target_doctype.py  fix_nivolumab_drug_mapping.py  fold_transitions_switch.py  generalize_telephony_spine.py  generalize_whatsapp_spine.py  migrate_automation_to_composite_keys.py  migrate_intake_field_map_target.py  migrate_webhook_tokens_to_password.py  neutralize_wati_message_id_field.py  recreate_whatsapp_message_id_index_composite.py  register_automation_module.py  register_modules.py  register_observability_module.py  register_push_notifications_module.py  rekey_task_types_composite.py  rename_push_module_to_notifications.py  rename_task_field_target.py  (+6 more)
(+239 files in other folders)
