[project]
name = "tatva_connect"
authors = [
    { name = "TatvaCare", email = "pareekshith.bompally@tatvacare.in"}
]
description = "TatvaCare custom Frappe app: WATI WhatsApp, Acefone telephony, CRM overrides"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "azure-storage-blob~=12.20",  # Azure Blob file offload (tatva_connect/storage)
    "google-auth~=2.40",  # FCM HTTP v1 OAuth token mint (tatva_connect/push_notifications)
    "clamd~=1.0",  # ClamAV INSTREAM virus scan for intake uploads (tatva_connect/intake/guards)
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

# These apt dependencies will be installed from Ubuntu repositories when you host your app on Frappe Cloud
[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "B",
    "RUF",
]
ignore = [
    "B017", # assertRaises(Exception) - should be more specific
    "B018", # useless expression, not assigned to anything
    "B023", # function doesn't bind loop variable - will have last iteration's value
    "B904", # raise inside except without from
    "E101", # indentation contains mixed spaces and tabs
    "E402", # module level import not at top of file
    "E501", # line too long
    "E741", # ambiguous variable name
    "F401", # "unused" imports
    "F403", # can't detect undefined names from * import
    "F405", # can't detect undefined names from * import
    "F722", # syntax error in forward type annotation
    "W191", # indentation contains tabs
]
typing-modules = ["frappe.types.DF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true

# ── Security / test harness (driven by `security/tcsec.py`; see security/README.md) ──

[tool.bandit]
# SAST over the shipped app code. Excludes are NOT app attack surface:
#   tests      — payload corpora (deliberate injection strings) + asserts; covered by the AST locks
#   .devbench  — local docker bench clone (never shipped)
#   archive    — dead/legacy code, out of active use
#   node_modules / scripts — vendored JS / local-only migration utilities
exclude_dirs = ["tests", ".devbench", "archive", "node_modules", "scripts"]

[tool.pytest.ini_options]
# `tcsec locks` invokes pytest with an EXPLICIT file allowlist (the decoupled AST scanners),
# so it never collects the frappe-dependent runtime tests. These defaults just keep a bare
# `pytest` run from wandering into the vendored/bench trees.
norecursedirs = [".devbench", "archive", "node_modules", "dist", ".zudoku"]
markers = ["static: pure-AST source lock, runnable without a bench"]
